test/scc/expr/semantic-errors/143.a
143.t:2:11: error: initializer element is not constant